--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   # Main Static Site
-  - type: static
+  - type: web
     name: statsapps-home
+    runtime: static
     buildCommand: echo "No build needed"
     staticPublishPath: ./site
     routes:
